aggiunto titolo e prima foto

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Una giornata al museo </title>
 </head>
+
 <body>
-    
+    <header>
+        <h1> Una giornata al museo</h1>
+    </header>
+    <main>
+        <section>
+            <h2>1.Il dipinto che mi ha colpito di più </h2>
+        <div>
+        <img src="img/quadro.png" alt="dipinto galleria principale">
+        <p>Un'opera d'arte affascinante vista nella galleria principale</p>
+        </div>
+        </section>
+        </main>
 </body>
+
+</header>
+</body>
+
 </html>
