--- a/index.html
+++ b/index.html
@@ -11,18 +11,30 @@
     <header>
         <h1> Una giornata al museo</h1>
     </header>
+    <!-- il dipinto che mi ha colpito di più-->
     <main>
         <section>
             <h2>1.Il dipinto che mi ha colpito di più </h2>
         <div>
         <img src="img/quadro.png" alt="dipinto galleria principale">
         <p>Un'opera d'arte affascinante vista nella galleria principale</p>
+        <p>Questo dopinto mi ha catturato per i suoi colori intensi e per l'espressione del voltodel personaggio raffigurato. &Egrave; come se raccontasse una storia senza parole.</p>
         </div>
         </section>
-        </main>
-</body>
+        <!-- Antica scultura-->
+        <section>
+        <h2>1.Un'antica scultura</h2>
+        <div> 
+        <img src="img/scultura.png" alt="immagine antica scultura">
+        <p>Scultura romana in marmo esposta nella sala archeologica</p>
+        <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e dell'armatura erano incredibilmente realistici.</p>
+        </div>
 
-</header>
+
+
+        </section>
+        </main>
+
 </body>
 
 </html>
