aggiunta lista perfezionato tag e finito esercizio

--- a/index.html
+++ b/index.html
@@ -15,32 +15,37 @@
     <main>
         <section>
             <h2>1.Il dipinto che mi ha colpito di più </h2>
-             <figure>
-            <img src="img/quadro.png" alt="dipinto galleria principale">
-            <figcaption>Un'opera d'arte affascinante vista nella galleria principale</figcaption>
+            <figure>
+                <img src="img/quadro.png" alt="dipinto galleria principale">
+                <figcaption>Un'opera d'arte affascinante vista nella galleria principale</figcaption>
             </figure>
-            <p>Questo dopinto mi ha catturato per i suoi colori intensi e per l'espressione del voltodel personaggio
+            <p>Questo dipinto mi ha catturato per i suoi colori intensi e per l'espressione del volto del personaggio
                 raffigurato. &Egrave; come se raccontasse una storia senza parole.</p>
         </section>
         <!-- Antica scultura-->
         <section>
             <h2>1.Un'antica scultura</h2>
             <figure>
-            <img src="img/scultura.png" alt="immagine antica scultura">
-            <figcaption>Scultura romana in marmo esposta nella sala archeologica</figcaption>
+                <img src="img/scultura.png" alt="immagine antica scultura">
+                <figcaption>Scultura romana in marmo esposta nella sala archeologica</figcaption>
             </figure>
             <p>La scultura era alta quasi due metri e mostrava un antico guerriero romano. I dettagli del viso e
                 dell'armatura erano incredibilmente realistici.</p>
         </section>
+
+        <!--inizio lista Le cose che ho imparato oggi-->
+        <section>
+            <h3>Le cose che ho imparato oggi:</h3>
+            <ul>
+                <li>Le statue romane venivano spesso dipinte a colori vivaci</li>
+                <li>Molti dipinti nascondono simboli e significati nascosti</li>
+                <li>Ogni opera ha una storia unica</li>
+            </ul>
+        </section>
     </main>
-
-
-
     <footer>
-
-
+        &copy; 2025 Insegnante di HTML
     </footer>
-
 </body>
 
 </html>
